Changelog
=========


v1.1 (in development)
---------------------

- Updated SQLInsertCompiler to work with Django 1.4
- Added support for ``disable_constraint_checking``, which is required for ``loaddata`` to work properly.
- Implemented ``DatabaseOperations.date_interval_sql`` to allow using expressions like ``end__lte=F('start')+delta``.
- Fixed date part extraction for ``week_day``.
- DatabaseWrapper reports vendor as 'microsoft'.
- AVG function now matches core backend behaviors and will auto-cast to ``float``, instead of maintaining datatype. 
  Set database ``OPTIONS`` setting ``disable_avg_cast`` to turn off the auto-cast behavior.
- StdDev and Variance aggregate functions are now supported and will map to the proper MSSQL named functions. Includes work around for Django ticket `#18334`_.

.. _`#18334`: https://code.djangoproject.com/ticket/18334