@@ -1,2 +1,4 @@
 # following PEP 386
 __version__ = "1.1rc2"
+
+import patches
